--- a/recipe.html
+++ b/recipe.html
@@ -14,29 +14,24 @@
     <section>
       <h2>Ingredients</h2>
       <ul>
-         <li> 1 cup all-purpose flour</li>
-         <li>1/2 teaspoon baking soda</li>
-         <li>1/4 cup unsalted butter, softened</li>
-         <li>1/4 cup granulated sugar</li>
-         <li>1/2 teaspoon vanilla extract</li>
-         <li>1/2 cup mini chocolate chips</li>
+          <li> 1 cup all-purpose flour</li>
+          <li>1/2 teaspoon baking soda</li>
+          <li>1/4 cup unsalted butter, softened</li>
+          <li>1/4 cup granulated sugar</li>
+          <li>1/2 teaspoon vanilla extract</li>
+          <li>1/2 cup mini chocolate chips</li>
       </ul>
 
       <h2>Instructions</h2>
-       <ol>
-         <li>Preheat your oven to 350°F (175°C) and line a baking sheet with parchment paper.</li>
-         <li>In a bowl, whisk together the flour and baking soda.
-</li>
-         <li>In another bowl, beat the butter, sugar, and vanilla extract until creamy.
-</li>
-         <li>Gradually add the dry ingredients to the wet mixture, then fold in the mini chocolate chips.
-</li>
-         <li>Drop small spoonfuls of dough onto the baking sheet.
-</li>
-         <li>Bake for 8-10 minutes, then let cool before enjoying!
-</li>
+        <ol>
+          <li>Preheat your oven to 350°F (175°C) and line a baking sheet with parchment paper.</li>
+          <li>In a bowl, whisk together the flour and baking soda.</li>
+          <li>In another bowl, beat the butter, sugar, and vanilla extract until creamy.</li>
+          <li>Gradually add the dry ingredients to the wet mixture, then fold in the mini chocolate chips.</li>
+          <li>Drop small spoonfuls of dough onto the baking sheet.</li>
+          <li>Bake for 8-10 minutes, then let cool before enjoying!</li>
       </ol>
-      
+        
     </section>
 
   </body>
